@@ -7,6 +7,11 @@
 
 namespace FOF30\Utils;
 
+use Exception;
+use Joomla\CMS\Cache\Cache;
+use Joomla\CMS\Factory;
+use Joomla\CMS\MVC\Model\BaseDatabaseModel;
+
 defined('_JEXEC') or die;
 
 /**
@@ -34,7 +39,7 @@ class CacheCleaner
 	 */
 	public static function clearPluginsCache()
 	{
-		self::clearCacheGroups(array('com_plugins'), array(0,1));
+		self::clearCacheGroups(['com_plugins'], [0, 1]);
 	}
 
 	/**
@@ -45,40 +50,68 @@ class CacheCleaner
 	 */
 	public static function clearModulesCache()
 	{
-		self::clearCacheGroups(array('com_modules'), array(0,1));
+		self::clearCacheGroups(['com_modules'], [0, 1]);
 	}
 
 	/**
 	 * Clears the specified cache groups.
 	 *
-	 * @param   array $clearGroups    Which cache groups to clear. Usually this is com_yourcomponent to clear your
-	 *                                component's cache.
-	 * @param   array   $cacheClients Which cache clients to clear. 0 is the back-end, 1 is the front-end. If you do not
-	 *                                specify anything, both cache clients will be cleared.
+	 * @param   array        $clearGroups   Which cache groups to clear. Usually this is com_yourcomponent to clear
+	 *                                      your component's cache.
+	 * @param   array        $cacheClients  Which cache clients to clear. 0 is the back-end, 1 is the front-end. If you
+	 *                                      do not specify anything, both cache clients will be cleared.
+	 * @param   string|null  $event         An event to run upon trying to clear the cache. Empty string to disable. If
+	 *                                      NULL and the group is "com_content" I will trigger onContentCleanCache.
 	 *
 	 * @return  void
 	 */
-	public static function clearCacheGroups(array $clearGroups, array $cacheClients = array(0, 1))
+	public static function clearCacheGroups(array $clearGroups, array $cacheClients = [0, 1], $event = null)
 	{
-		$conf = \JFactory::getConfig();
+		try
+		{
+			$app = Factory::getApplication();
+		}
+		catch (Exception $e)
+		{
+			return;
+		}
 
 		foreach ($clearGroups as $group)
 		{
 			foreach ($cacheClients as $client_id)
 			{
+				$options = [
+					'defaultgroup' => $group,
+					'cachebase'    => ($client_id) ? JPATH_ADMINISTRATOR . '/cache' : $app->get('cache_path', JPATH_SITE . '/cache'),
+					'result'       => true,
+				];
+
 				try
 				{
-					$options = array(
-						'defaultgroup' => $group,
-						'cachebase' => ($client_id) ? JPATH_ADMINISTRATOR . '/cache' : $conf->get('cache_path', JPATH_SITE . '/cache')
-					);
-
-					$cache = \JCache::getInstance('callback', $options);
+					$cache = Cache::getInstance('callback', $options);
+					/** @noinspection PhpUndefinedMethodInspection Available via __call(), not tagged in Joomla core */
 					$cache->clean();
 				}
-				catch (\Exception $e)
+				catch (Exception $e)
 				{
-					// suck it up
+					$options['result'] = false;
+				}
+
+				/**
+				 * Call Joomla's cache cleaning plugin event (e.g. onContentCleanCache) as well.
+				 *
+				 * @see BaseDatabaseModel::cleanCache()
+				 */
+				if (!empty($event))
+				{
+					$app->triggerEvent($event, $options);
+				}
+				/**
+				 * If you're cleaning com_content and you have passed no event name I will use onContentCleanCache.
+				 */
+				elseif (($group == 'com_content') && ($event !== ''))
+				{
+					$app->triggerEvent('onContentCleanCache', $options);
 				}
 			}
 		}
