@@ -2,6 +2,7 @@ FOF 3.5.3
 ================================================================================
 ~ The custom_css option now applies to all renderers
 ~ Optimized the way the default media query is determined
+~ Improve the CacheCleaner helper
 
 FOF 3.5.2
 ================================================================================
